# wordsearch_generator

./: Cargo.toml  Cargo_minimal.toml  LICENSE  MSVC_EXPLANATION.md  README.md  WSL2_SETUP_GUIDE.md  build_instructions.md  example_words.yaml  small_example.yaml
src/: main.rs  minimal.rs  simple.rs
